--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
 
-    <title>My Website [John Usher Hopepage]</title>
+    <title>John Usher's Hopepage</title>
 
   </head>
 
@@ -18,7 +18,7 @@
 
     <main>
 
-        <h1>Welcome to My Website [John Usher Hopepage]</h1>  
+        <h1>John Usher's Hopepage</h1>  
 
         <p>This is my new website hosted on GitHub Pages!</p>
 
