image size small

--- a/index.html
+++ b/index.html
@@ -49,22 +49,24 @@
             background: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .summary, .projects {
+        .summary, .specialties, .projects {
             background: #f3f3f3;
             padding: 20px;
             border-radius: 10px;
             margin-top: 20px;
         }
-        .projects h2 {
+        .projects h2, .specialties h2 {
             color: #283593;
         }
         .project-item {
             margin-bottom: 20px;
         }
         .project-item img {
-            max-width: 100%;
+            max-width: 30%;
             height: auto;
             border-radius: 10px;
+            display: block;
+            margin: 10px auto;
         }
         footer {
             background-color: #333;
@@ -96,6 +98,22 @@
             <p>John then co-founded a loudspeaker company. He engineered an all-carbon fibre high-end active loudspeaker. The design used a novel waveguide to direct sound towards a listening position, reducing coloration from room effects. The sound experience was commended by illustrious industry critics and musicians.</p>
             <p>He now works in the audio group at Synaptics, engineering next-generation telecommunications systems using classical DSP and the latest ML systems.</p>
             <p>He is a keen tinkerer of electronics projects using Arduino and Raspberry Pi.</p>
+        </div>
+        <div class="specialties">
+            <h2>Specialties</h2>
+            <ul>
+                <li>Audio enhancement with DSP and ML for noise reduction, dereverberation, AEC, automatic level control, spatial filtering.</li>
+                <li>Audio ML using RNN, CNN, U-Nets in Pytorch and Tensorflow with Onnx export.</li>
+                <li>Psychoacoustics for loudspeakers and earphones: timbral, spatial fidelity optimization, situational awareness (passthrough).</li>
+                <li>Low-latency audio DSP algorithms: ANC, echo-cancelling, beamforming, filtering, sound detection/classification, sub-band processing, noise reduction, spatial filtering.</li>
+                <li>Dosimetry.</li>
+                <li>Room acoustics.</li>
+                <li>Spatial audio upmixing.</li>
+                <li>Subjective sound quality evaluation for music and speech.</li>
+                <li>Code: Matlab, C, Python, assembly, Go.</li>
+                <li>Patent drafting: 50+ patents on audio DSP.</li>
+                <li>Excellent communication and independent project management skills.</li>
+            </ul>
         </div>
         <div class="projects">
             <h2>Projects</h2>
